--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <a href="https://captcha-test.github.io/home">← Back to Home</a>
+  <a href="https://captcha-test.github.io/">← Back to Home</a>
   <h1>Yandex SmartCaptcha</h1>
   <form id="captcha-form" action="#" method="POST">
     <div id="smartcaptcha-container"></div>
